--- a/Registro/appsettings.json
+++ b/Registro/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlConStr": "Data Source=DESKTOP-AB3T7MC\\SQLEXPRESS;Initial Catalog=RegistroDb;Integrated Security=True;Encrypt=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
