Cambio de connection string por problemas.

--- a/Registro/appsettings.json
+++ b/Registro/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConStr": "Data Source=THEBEAST\\MARCOS;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SqlConStr": "Data Source=THEBEAST\\MARCOS;Initial Catalog=Registro;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
