--- a/Registro/appsettings.json
+++ b/Registro/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConStr": "workstation id=Registro.mssql.somee.com;packet size=4096;user id=Fero_SQLLogin_1;pwd=nt7osiocut;data source=Registro.mssql.somee.com;persist security info=False;initial catalog=Registro;TrustServerCertificate=True"
+    "SqlConStr": "workstation id=Registro.mssql.somee.com;packet size=4096;user id=Fero_SQLLogin_1;pwd=hk86kyp5x9;data source=Registro.mssql.somee.com;persist security info=False;initial catalog=Registro;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
